tests/ui/pub/pub-ident-struct.rs
//@ run-rustfix

pub S {
//~^ ERROR missing `struct` for struct definition
}
fn main() {}

// ferrocene-annotations: fls_9ucqbbd0s2yo
// Struct Types
